Updated blog href in navbar, added temporary elements to Contact section, enabled closing cards by clicking outside on main page. Fixed card height on mobile. Adjusted main page SVGs, reduced transition duration, and updated main text.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -166,27 +166,27 @@ body::-webkit-scrollbar {
 }
 
 .fade-in-up-delay-1 {
-  animation-delay: 0.2s;
+  animation-delay: 0.02s;
 }
 
 .fade-in-up-delay-2 {
-  animation-delay: 0.4s;
+  animation-delay: 0.04s;
 }
 
 .fade-in-up-delay-3 {
-  animation-delay: 0.6s;
+  animation-delay: 0.06s;
 }
 
 .fade-in-up-delay-4 {
-  animation-delay: 0.8s;
+  animation-delay: 0.08s;
 }
 
 .fade-in-up-delay-5 {
-  animation-delay: 1s;
+  animation-delay: 0.10s;
 }
 
 .fade-in-up-delay-6 {
-  animation-delay: 1.2s;
+  animation-delay: 0.12s;
 }
 
 @keyframes fadeOutDown {
